--- a/game.html
+++ b/game.html
@@ -66,8 +66,8 @@
     </div>
     <div id='buzzer' class="screen">
         <div id='status'>
-            <h2 id='rank'></h2>
-            <h2 id='score'></h2>
+            <h2 id='name-display'></h2>
+            <h2 id='score-display'></h2>
         </div>
         <input type="button" class="btn btn-danger" id='bell'>
     </div>
