host client progress

--- a/game.html
+++ b/game.html
@@ -60,6 +60,7 @@
                 <input type="button" id='incorrect' class="form-control btn btn-danger validation" value="Incorrect" disabled>
             </div>
             <div class="rounded-bottom">
+                <input type="button" id='show' class="form-control btn btn-dark" value="Show Answer">
                 <input type="button" id='back' class="form-control btn btn-dark" value="Return to board">
             </div>
         </div>
